# ff-l

./: .gitignore  AGENTS.md  agent.md
client/: README.md  pubspec.yaml
client/android/app/: build.gradle.kts
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/example/ai_judge_client/: MainActivity.kt
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/linux/: CMakeLists.txt
client/linux/runner/: my_application.cc
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client/macos/Runner/Configs/: AppInfo.xcconfig
client/test/: widget_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
server/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/src/: main.py
server/src/core/: config.py
server/src/core/db/: __init__.py  connection.py
server/src/feature/judge/: model.py  router.py  schemas.py  service.py
server/src/feature/user/: __init__.py  model.py  router.py  schemas.py
server/src/utils/: __init__.py  slack.py
server/tests/: conftest.py  test_judge_service.py  test_main.py
